# ldrobot-lidar-nav2

./: CONTRIBUTING.md  README.md
obstacle_detection/: CMakeLists.txt  README.md  package.xml
obstacle_detection/launch/: ld19_local_costmap.launch.py
obstacle_detection/params/: lifecycle_mgr.yaml
visualization/: README.md
